Testing/Data/GMV/invalid/polygonal.mesh.definition.too.short.ascii.gmv.md5
f106a1171ceec93639bf01e39c57cc8e
